feat: added contry code to get_countries API response
